--- a/app/src/main/res/layout/rank_dialog.xml
+++ b/app/src/main/res/layout/rank_dialog.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="15dp"
     android:orientation="vertical"
     android:padding="2dip">
 
