--- a/app/src/main/res/layout/activity_sign_up_team.xml
+++ b/app/src/main/res/layout/activity_sign_up_team.xml
@@ -36,7 +36,7 @@
         android:background="@color/button_background"
         android:elevation="@dimen/button_elevation"
         android:onClick="addTeam"
-        android:text="Prihlas ma"
+        android:text="REGISTRUJ"
         android:textColor="@color/button_text"
         android:textStyle="bold" />
 
