--- a/app/src/main/res/layout/activity_sign_up_team.xml
+++ b/app/src/main/res/layout/activity_sign_up_team.xml
@@ -5,30 +5,18 @@
     android:background="@color/background_tint"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="25dp">
+    android:padding="15dp">
 
-
-    <LinearLayout
+    <EditText
+        android:id="@+id/team_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginBottom="5dp"
+        android:gravity="center"
+        android:hint="Meno teamu"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:gravity="end"
-            android:text="Meno teamu:"
-            android:textSize="13sp" />
-
-        <EditText
-            android:id="@+id/team_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="start"
-            android:textSize="10sp" />
-
-    </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
