--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,7 @@
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.00</item>
 
     <dimen name="button_elevation">6dp</dimen>
+    <dimen name="round_button_dimen">52dp</dimen>
 
     <dimen name="fab_elevation">6dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
