--- a/app/src/main/res/layout/activity_sign_up_team.xml
+++ b/app/src/main/res/layout/activity_sign_up_team.xml
@@ -14,6 +14,8 @@
         android:layout_marginBottom="5dp"
         android:gravity="center"
         android:hint="Meno teamu"
+        android:paddingEnd="15dp"
+        android:paddingStart="15dp"
         android:textColor="@color/black"
         android:textSize="15dp" />
 
