--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -5,41 +5,41 @@
     android:background="@color/background_tint"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="15dp">
+    android:padding="25dp">
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:hint="Meno teamu:"
+        android:text="Meno teamu:"
         android:textColor="@color/black"
         android:textSize="13dp" />
 
-    <EditText
+    <TextView
         android:id="@+id/team_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="15dp"
         android:gravity="center"
-        android:hint="Meno teamu"
+        android:text="Meno teamu"
         android:textColor="@color/black"
         android:textSize="15dp" />
 
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="start"
-        android:hint="Celkove body:"
+        android:text="Celkove body:"
         android:textColor="@color/black"
         android:textSize="13dp" />
 
-    <EditText
+    <TextView
         android:id="@+id/team_points_overall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center"
-        android:hint="125"
+        android:text="125"
         android:textColor="@color/black"
         android:textSize="15dp" />
 
@@ -48,10 +48,8 @@
         android:layout_width="@dimen/round_button_dimen"
         android:layout_height="@dimen/round_button_dimen"
         android:layout_gravity="bottom|end"
-        android:background="@drawable/button_action"
-        android:backgroundTint="@color/background_tint_red"
-        android:backgroundTintMode="src_over"
-        android:drawableTop="@drawable/ic_remove_circle_black_24dp"
+        android:background="@drawable/round_button_red"
+        android:drawableTop="@drawable/ic_delete_black_24dp"
         android:elevation="@dimen/button_elevation"
         android:onClick="eraseTeam"
         android:paddingTop="13dp"
