--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -43,17 +43,41 @@
         android:textColor="@color/black"
         android:textSize="15dp" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="5dp"
+        android:background="@android:color/darker_gray" />
 
-    <Button
-        android:layout_width="@dimen/round_button_dimen"
-        android:layout_height="@dimen/round_button_dimen"
-        android:layout_gravity="bottom|end"
-        android:background="@drawable/round_button_red"
-        android:drawableTop="@drawable/ic_delete_black_24dp"
-        android:elevation="@dimen/button_elevation"
-        android:onClick="eraseTeam"
-        android:paddingTop="13dp"
-        android:textColor="@color/button_text"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:orientation="horizontal">
 
+        <Button
+            android:layout_width="@dimen/round_button_dimen"
+            android:layout_height="@dimen/round_button_dimen"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="13dp"
+            android:background="@drawable/round_button_green"
+            android:drawableTop="@drawable/ic_add_black_24dp"
+            android:elevation="@dimen/button_elevation"
+            android:onClick="addUserToTeam"
+            android:paddingTop="13dp"
+            android:textColor="@color/button_text"
+            android:textStyle="bold" />
+
+        <Button
+            android:layout_width="@dimen/round_button_dimen"
+            android:layout_height="@dimen/round_button_dimen"
+            android:layout_gravity="bottom|end"
+            android:background="@drawable/round_button_red"
+            android:drawableTop="@drawable/ic_delete_black_24dp"
+            android:elevation="@dimen/button_elevation"
+            android:onClick="eraseTeam"
+            android:paddingTop="13dp"
+            android:textColor="@color/button_text"
+            android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
