--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,6 +40,7 @@
 
     <color name="background_tint">#66FFFFFF</color>
     <color name="background_tint_red">#66F44336</color>
+    <color name="background_tint_green">#6604561A</color>
 
 
     <color name="black">#000</color>
