--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -46,8 +46,17 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_margin="5dp"
+        android:layout_margin="@dimen/view_default_margin"
         android:background="@android:color/darker_gray" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:gravity="start"
+        android:text="Pridaj clena teamu:"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -55,29 +64,56 @@
         android:gravity="end"
         android:orientation="horizontal">
 
+        <EditText
+            android:id="@+id/member_mail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:gravity="end"
+            android:hint="Zadaj mail" />
+
         <Button
-            android:layout_width="@dimen/round_button_dimen"
-            android:layout_height="@dimen/round_button_dimen"
+            android:layout_width="@dimen/round_button_dimen_small"
+            android:layout_height="@dimen/round_button_dimen_small"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="13dp"
             android:background="@drawable/round_button_green"
             android:drawableTop="@drawable/ic_add_black_24dp"
             android:elevation="@dimen/button_elevation"
             android:onClick="addUserToTeam"
-            android:paddingTop="13dp"
+            android:paddingTop="6dp"
             android:textColor="@color/button_text"
             android:textStyle="bold" />
 
         <Button
-            android:layout_width="@dimen/round_button_dimen"
-            android:layout_height="@dimen/round_button_dimen"
+            android:layout_width="@dimen/round_button_dimen_small"
+            android:layout_height="@dimen/round_button_dimen_small"
             android:layout_gravity="bottom|end"
             android:background="@drawable/round_button_red"
-            android:drawableTop="@drawable/ic_delete_black_24dp"
+            android:drawableTop="@drawable/ic_remove_black_24dp"
             android:elevation="@dimen/button_elevation"
-            android:onClick="eraseTeam"
-            android:paddingTop="13dp"
+            android:onClick="removeUserFromTeam"
+            android:paddingTop="6dp"
             android:textColor="@color/button_text"
             android:textStyle="bold" />
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="@dimen/view_default_margin"
+        android:background="@android:color/darker_gray" />
+
+    <Button
+        android:layout_width="@dimen/round_button_dimen"
+        android:layout_height="@dimen/round_button_dimen"
+        android:layout_gravity="bottom|end"
+        android:background="@drawable/round_button_red"
+        android:drawableTop="@drawable/ic_delete_black_24dp"
+        android:elevation="@dimen/button_elevation"
+        android:onClick="eraseTeam"
+        android:paddingTop="13dp"
+        android:textColor="@color/button_text"
+        android:textStyle="bold" />
+
 </LinearLayout>
