--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,12 +6,15 @@
 
     <dimen name="button_elevation">6dp</dimen>
     <dimen name="round_button_dimen">52dp</dimen>
+    <dimen name="round_button_dimen_small">36dp</dimen>
 
     <dimen name="fab_elevation">6dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
     <dimen name="fab_margin">24dp</dimen>
 
     <dimen name="toolbar_max_height">250dp</dimen>
+
+    <dimen name="view_default_margin">10dp</dimen>
 
 
     <!-- Default screen margins, per the Android Design guidelines. -->
