--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sign_in_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="250dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="25dp"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -10,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/sign_in"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -23,4 +24,4 @@
         android:layout_gravity="center"
         android:visibility="visible" />
 
-</FrameLayout>
+</LinearLayout>
