--- a/app/src/main/res/layout/activity_team_detail.xml
+++ b/app/src/main/res/layout/activity_team_detail.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
+    android:layout_width="320dp"
     android:layout_height="wrap_content"
     android:background="@color/background_tint"
     android:gravity="center"
@@ -31,7 +31,7 @@
         android:gravity="start"
         android:text="Celkove body:"
         android:textColor="@color/black"
-        android:textSize="13dp" />
+        android:textSize="14dp" />
 
     <TextView
         android:id="@+id/team_points_overall"
@@ -42,6 +42,21 @@
         android:text="125"
         android:textColor="@color/black"
         android:textSize="15dp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:text="Zoznam clenov:"
+        android:textColor="@color/black"
+        android:textSize="14dp" />
+
+    <LinearLayout
+        android:id="@+id/memeber_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="25dp"
+        android:orientation="vertical" />
 
     <View
         android:layout_width="match_parent"
@@ -68,14 +83,18 @@
             android:id="@+id/member_mail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginEnd="10dp"
-            android:gravity="end"
-            android:hint="Zadaj mail" />
+            android:ellipsize="start"
+            android:gravity="center_horizontal"
+            android:hint="Zadaj mail"
+            android:maxLines="1"
+            android:textSize="14dp" />
 
         <Button
             android:layout_width="@dimen/round_button_dimen_small"
             android:layout_height="@dimen/round_button_dimen_small"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="end"
             android:layout_marginEnd="13dp"
             android:background="@drawable/round_button_green"
             android:drawableTop="@drawable/ic_add_black_24dp"
@@ -88,7 +107,7 @@
         <Button
             android:layout_width="@dimen/round_button_dimen_small"
             android:layout_height="@dimen/round_button_dimen_small"
-            android:layout_gravity="bottom|end"
+            android:layout_gravity="end"
             android:background="@drawable/round_button_red"
             android:drawableTop="@drawable/ic_remove_black_24dp"
             android:elevation="@dimen/button_elevation"
