--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -19,6 +19,7 @@
             android:padding="15dp">
 
             <LinearLayout
+                android:id="@+id/header_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -38,6 +39,7 @@
 
 
                 <Button
+                    android:id="@+id/move_to_done_button"
                     android:layout_width="@dimen/round_button_dimen"
                     android:layout_height="@dimen/round_button_dimen"
                     android:layout_gravity="end"
@@ -47,7 +49,8 @@
                     android:onClick="moveToDone"
                     android:paddingTop="13dp"
                     android:textColor="@color/button_text"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
