--- a/app/src/main/res/layout/activity_quiz_detail.xml
+++ b/app/src/main/res/layout/activity_quiz_detail.xml
@@ -14,18 +14,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:orientation="vertical"
-            android:paddingBottom="50dp"
-            android:paddingEnd="15dp"
-            android:paddingStart="15dp"
-            android:paddingTop="15dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:gravity="center"
                 android:orientation="horizontal"
+                android:padding="15dp"
                 android:paddingBottom="5dp">
 
                 <TextView
@@ -66,7 +63,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/background_tint"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingEnd="30dp"
+                android:paddingStart="30dp">
 
                 <TextView
                     android:id="@+id/quiz_date"
@@ -99,20 +98,30 @@
                 android:background="@android:color/darker_gray"
                 android:padding="5dp" />
 
-            <TextView
-                android:id="@+id/scoreboard_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="start"
-                android:paddingTop="10dp"
-                android:text="Zoznam teamov:"
-                android:textSize="14sp" />
-
             <LinearLayout
-                android:id="@+id/teams_placeholder"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:layout_height="match_parent"
+                android:layout_margin="15dp"
+                android:orientation="vertical"
+                android:padding="15dp"
+                android:paddingBottom="50dp">
+
+                <TextView
+                    android:id="@+id/scoreboard_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:text="Zoznam teamov:"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:id="@+id/teams_placeholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingStart="20dp" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
