--- a/app/src/main/res/layout/activity_quiz_pending.xml
+++ b/app/src/main/res/layout/activity_quiz_pending.xml
@@ -14,16 +14,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:orientation="vertical"
-            android:padding="15dp">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/header_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="15dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
+                android:padding="15dp"
                 android:paddingBottom="5dp">
 
                 <TextView
@@ -34,7 +34,7 @@
                     android:elevation="@dimen/button_elevation"
                     android:gravity="center_horizontal"
                     android:text="name"
-                    android:textSize="25sp"
+                    android:textSize="35sp"
                     android:textStyle="bold" />
 
 
@@ -65,7 +65,9 @@
                 android:layout_height="wrap_content"
                 android:background="@color/background_tint"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingEnd="30dp"
+                android:paddingStart="30dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -152,7 +154,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="15dp"
                 android:orientation="vertical"
+                android:padding="15dp"
                 android:paddingBottom="50dp">
 
                 <TextView
@@ -161,13 +165,15 @@
                     android:layout_height="wrap_content"
                     android:gravity="start"
                     android:text="Zoznam teamov:"
-                    android:textSize="14sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:id="@+id/teams_placeholder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" />
+                    android:orientation="vertical"
+                    android:paddingStart="20dp" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
