--- a/app/src/main/res/layout/team_line.xml
+++ b/app/src/main/res/layout/team_line.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/quiz_team_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,12 +10,35 @@
         android:id="@+id/team_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_gravity="center"
+        android:layout_weight="6"
+        android:lines="1"
+        android:text="Meno" />
 
-    <TextView
-        android:id="@+id/team_points"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_gravity="center"
+        android:layout_weight="4"
+        android:gravity="start|center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/team_points"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:lines="1"
+            android:text="N/A" />
+
+        <Button
+            android:id="@+id/edit_team_points"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="end"
+            android:background="@drawable/ic_edit_black_24dp"
+            android:onClick="editPoints"
+            android:visibility="gone" />
+    </LinearLayout>
 
 </LinearLayout>
