--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,6 +45,7 @@
     <color name="background_tint_red">#66F44336</color>
     <color name="background_tint_green">#6604561A</color>
 
+    <color name="white">#FFFFFF</color>
     <color name="black">#000</color>
     <color name="button_background">#F44336</color>
     <color name="button_text">#ffffff</color>
