--- a/app/src/main/res/layout/team_line_quizzes.xml
+++ b/app/src/main/res/layout/team_line_quizzes.xml
@@ -6,6 +6,12 @@
     android:layout_marginTop="15dp"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/team_photo"
+        android:layout_width="@dimen/team_thumbnail_default_width"
+        android:layout_height="match_parent"
+        android:scaleType="centerInside" />
+
     <TextView
         android:id="@+id/team_name"
         android:layout_width="match_parent"
