--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,8 @@
 
     <dimen name="view_default_margin">5dp</dimen>
 
+    <dimen name="team_thumbnail_default_width">65dp</dimen>
+
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
